--- a/index.html
+++ b/index.html
@@ -285,23 +285,25 @@
     }
 
     /* Render Products */
-    let products = JSON.parse(localStorage.getItem("products"));
-    const container = document.getElementById("featuredProductsContainer");
+    /* Render Products */
+let products = JSON.parse(localStorage.getItem("products"));
+const container = document.getElementById("featuredProductsContainer");
 
-    products.slice(0, 6).forEach((p, i) => {
-        container.innerHTML += `
-        <div class="col-md-4">
-            <div class="card product-card shadow-sm fade-card" style="animation-delay:${i * 0.08}s">
-                <img src="pages/${p.image}" class="card-img-top" alt="${p.name}">
-                <div class="card-body">
-                    <h5 class="fw-bold">${p.name}</h5>
-                    <p class="product-desc">${p.description}</p>
-                    <p class="product-price">₹${p.price}</p>
-                    <a href="pages/products.html" class="btn btn-neon w-100 mt-2">Buy Now</a>
-                </div>
+products.slice(0, 6).forEach((p, i) => {
+    container.innerHTML += `
+    <div class="col-md-4">
+        <div class="card product-card shadow-sm fade-card" style="animation-delay:${i * 0.08}s">
+            <img src="./pages/${p.image}" class="card-img-top" alt="${p.name}">
+            <div class="card-body">
+                <h5 class="fw-bold">${p.name}</h5>
+                <p class="product-desc">${p.description}</p>
+                <p class="product-price">₹${p.price}</p>
+                <a href="pages/products.html" class="btn btn-neon w-100 mt-2">Buy Now</a>
             </div>
-        </div>`;
-    });
+        </div>
+    </div>`;
+});
+
 </script>
 
 </body>
