--- a/pages/cart.html
+++ b/pages/cart.html
@@ -5,102 +5,172 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Cart - ShopEasy</title>
 
+    <!-- Bootstrap CSS -->
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet">
 
     <style>
-        body { background-color: #eef1f4; }
-        .item-img { width: 100px; height:100px; object-fit: cover; border-radius:8px; }
-        .qty-btn { width:35px; font-size:18px; font-weight:bold; }
+        body {
+            background-color: #0a0f1f;
+            color: #ffffff;
+            font-family: 'Segoe UI', sans-serif;
+        }
+
+        .navbar {
+            background: linear-gradient(90deg,#4e00c9,#00eaff);
+        }
+
+        .cart-card {
+            background: #101524;
+            border: none;
+            border-radius: 12px;
+            padding: 15px;
+            transition: .3s;
+        }
+
+        .cart-card:hover {
+            transform: translateY(-5px);
+            box-shadow: 0 8px 22px rgba(0, 238, 255, 0.25);
+        }
+
+        .item-img {
+            width: 95px;
+            height: 95px;
+            object-fit: cover;
+            border-radius: 10px;
+            border: 2px solid #00eaff;
+        }
+
+        .qty-btn {
+            background: #4e00c9;
+            border: none;
+            width: 35px;
+            height: 35px;
+            color: white;
+            font-weight: bold;
+            border-radius: 50%;
+        }
+
+        .qty-btn:hover {
+            background: #00eaff;
+            color: black;
+        }
+
+        .btn-checkout {
+            background: linear-gradient(90deg,#00eaff,#4e00c9);
+            border: none;
+            font-size: 18px;
+            font-weight: bold;
+            color: #ffffff;
+        }
+        .btn-checkout:hover {
+            opacity: .85;
+        }
+
+        .empty-text {
+            color: #aaaaaa;
+        }
     </style>
 </head>
 <body>
 
-<nav class="navbar navbar-expand-lg navbar-dark bg-dark">
-    <div class="container">
-        <a class="navbar-brand fw-bold" href="../index.html">ShopEasy</a>
-        <ul class="navbar-nav ms-auto" id="navbarLinks"></ul>
+    <!-- Navbar -->
+    <nav class="navbar navbar-expand-lg navbar-dark shadow-lg">
+        <div class="container">
+            <a class="navbar-brand fw-bold" href="../index.html">ShopEasy</a>
+            <ul class="navbar-nav ms-auto" id="navbarLinks"></ul>
+        </div>
+    </nav>
+
+    <div class="container mt-4">
+        <h2 class="fw-bold text-center mb-4">Your Cart</h2>
+        <div id="cartItems"></div>
+
+        <div class="text-end mt-4">
+            <h4 class="fw-bold">Total: ₹<span id="totalPrice">0</span></h4>
+            <button class="btn-checkout px-4 py-2 mt-2" id="checkoutBtn">Checkout</button>
+        </div>
     </div>
-</nav>
 
-<div class="container mt-4">
-    <h2 class="fw-bold text-center">Your Cart</h2>
-    <div id="cartItems"></div>
+    <script>
+        let loggedUser = JSON.parse(localStorage.getItem("loggedInUser"));
+        if (!loggedUser) {
+            alert("Please log in first!");
+            window.location.href = "login.html";
+        }
 
-    <div class="text-end mt-4">
-        <h4>Total: ₹ <span id="totalPrice">0</span></h4>
-        <button id="checkoutBtn" class="btn btn-success mt-2">Checkout</button>
-    </div>
-</div>
+        let navbar = document.getElementById("navbarLinks");
+        navbar.innerHTML = `
+            <li class="nav-item"><a class="nav-link">Welcome, ${loggedUser.name}</a></li>
+            <li class="nav-item"><a id="logoutBtn" class="nav-link">Logout</a></li>
+        `;
 
-<script>
-let loggedUser = JSON.parse(localStorage.getItem("loggedInUser"));
-if(!loggedUser){
-    alert("Please Login!");
-    window.location.href = "login.html";
-}
+        document.getElementById("logoutBtn").onclick = () => {
+            localStorage.removeItem("loggedInUser");
+            window.location.href = "login.html";
+        };
 
-document.getElementById("navbarLinks").innerHTML = `
-<li class="nav-item"><a class="nav-link">Welcome, ${loggedUser.name}</a></li>
-<li class="nav-item"><a class="nav-link" onclick="logout()">Logout</a></li>`;
+        let cart = JSON.parse(localStorage.getItem("cart")) || [];
+        const cartDiv = document.getElementById("cartItems");
+        const totalPriceElement = document.getElementById("totalPrice");
 
-function logout(){
-    localStorage.removeItem("loggedInUser");
-    window.location.href = "login.html";
-}
+        function renderCart() {
+            cartDiv.innerHTML = "";
+            let total = 0;
 
-let cart = JSON.parse(localStorage.getItem("cart")) || [];
-const cartItems = document.getElementById("cartItems");
-const totalPrice = document.getElementById("totalPrice");
+            if(cart.length === 0){
+                cartDiv.innerHTML = `<p class="text-center empty-text">Your cart is empty.</p>`;
+                totalPriceElement.innerText = "0";
+                return;
+            }
 
-function updateCart(){
-    cartItems.innerHTML = "";
-    let total = 0;
+            cart.forEach((item, idx) => {
+                total += item.price * item.qty;
 
-    cart.forEach((item, i) => {
-        total += item.price * item.qty;
+                cartDiv.innerHTML += `
+                    <div class="cart-card mb-3 d-flex align-items-center shadow-sm">
+                        <img src="../pages/${item.image}" class="item-img me-3">
+                        <div>
+                            <h5 class="fw-bold">${item.name}</h5>
+                            <p class="mb-1">₹${item.price}</p>
+                            <div class="d-flex align-items-center">
+                                <button class="qty-btn" onclick="updateQty(${idx}, -1)">-</button>
+                                <span class="mx-2">${item.qty}</span>
+                                <button class="qty-btn" onclick="updateQty(${idx}, 1)">+</button>
+                                <button class="btn btn-danger btn-sm ms-3"
+                                    onclick="removeItem(${idx})">Remove</button>
+                            </div>
+                        </div>
+                    </div>
+                `;
+            });
 
-        cartItems.innerHTML += `
-        <div class="card p-3 mt-3 shadow-sm">
-            <div class="d-flex align-items-center justify-content-between">
-                <img src="${item.image}" class="item-img">
-                
-                <div>
-                    <h6>${item.name}</h6>
-                    <p class="m-0 fw-bold">₹${item.price} x ${item.qty}</p>
-                </div>
+            totalPriceElement.innerText = total.toLocaleString("en-IN");
+        }
 
-                <div>
-                    <button class="btn btn-outline-dark qty-btn" onclick="changeQty(${i}, 1)">+</button>
-                    <button class="btn btn-outline-dark qty-btn" onclick="changeQty(${i}, -1)">-</button>
-                </div>
-                <button class="btn btn-danger btn-sm" onclick="removeItem(${i})">Remove</button>
-            </div>
-        </div>`;
-    });
+        function updateQty(index, val) {
+            cart[index].qty += val;
+            if(cart[index].qty < 1) {
+                cart.splice(index, 1);
+            }
+            localStorage.setItem("cart", JSON.stringify(cart));
+            renderCart();
+        }
 
-    totalPrice.innerText = total.toFixed(2);
-    localStorage.setItem("cart", JSON.stringify(cart));
-}
+        function removeItem(index) {
+            cart.splice(index, 1);
+            localStorage.setItem("cart", JSON.stringify(cart));
+            renderCart();
+        }
 
-function changeQty(i, val){
-    cart[i].qty += val;
-    if(cart[i].qty <= 0) removeItem(i);
-    updateCart();
-}
+        document.getElementById("checkoutBtn").onclick = () => {
+            alert("Checkout successful! (Simulation)");
+            localStorage.removeItem("cart");
+            renderCart();
+        };
 
-function removeItem(i){
-    cart.splice(i, 1);
-    updateCart();
-}
-
-document.getElementById("checkoutBtn").onclick = () => {
-    alert("Order Placed Successfully!");
-    localStorage.removeItem("cart");
-    updateCart();
-};
-
-updateCart();
-</script>
+        renderCart();
+    </script>
 
 </body>
 </html>
+
