--- a/pages/login.html
+++ b/pages/login.html
@@ -5,62 +5,79 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Login - ShopEasy</title>
 
+    <!-- Bootstrap CSS -->
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet">
 
     <style>
-        body {
-            background: url('bg_image.jpeg') no-repeat center center fixed;
-            background-size: cover;
-            font-family: Arial, sans-serif;
+        body, html {
+            height: 100%;
+            margin: 0;
+            font-family: 'Segoe UI', sans-serif;
+            background: radial-gradient(circle, #101524, #05070f);
+            color: white;
         }
-        .overlay {
-            background: rgba(0,0,0,0.6);
-            position: fixed;
-            inset: 0;
-        }
+
         .login-box {
-            background: #fff;
-            padding: 30px;
-            border-radius: 12px;
+            background: rgba(20, 20, 40, 0.9);
+            padding: 35px;
+            border-radius: 15px;
+            box-shadow: 0 0 25px rgba(0, 238, 255, 0.4);
             width: 380px;
+            position: relative;
         }
-        .material-input {
-            border: none;
-            border-bottom: 2px solid #777;
-            border-radius: 0;
+
+        .login-box h3{
+            color: #00eaff;
+            font-weight: bold;
+        }
+
+        .form-control{
             background: transparent;
+            border: none;
+            border-bottom: 2px solid #00eaff;
+            border-radius: 0;
+            color: white;
         }
-        .material-input:focus {
+        .form-control:focus {
             box-shadow: none;
-            border-bottom: 2px solid #007bff;
+            border-bottom-color: #6a00ff;
         }
+
+        .btn-login {
+            background: linear-gradient(90deg,#4e00c9,#00eaff);
+            color: #fff;
+            border: none;
+            font-weight: bold;
+        }
+        .btn-login:hover {
+            opacity: .85;
+        }
+
+        a {
+            color: #00eaff;
+        }
+        a:hover {
+            text-decoration: underline;
+        }
+
     </style>
 </head>
 <body>
 
-    <div class="overlay d-flex justify-content-center align-items-center">
-        <div class="login-box shadow">
+    <div class="d-flex justify-content-center align-items-center" style="height:100vh;">
+        <div class="login-box text-center">
 
-            <h3 class="text-center fw-bold mb-3">Login</h3>
-            <p class="text-center text-muted">Welcome to ShopEasy</p>
+            <h3 class="mb-4">Login</h3>
 
-            <form id="loginForm" autocomplete="off">
+            <form id="loginForm">
 
-                <div class="mb-3">
-                    <label class="fw-semibold">Email</label>
-                    <input type="email" id="email" class="form-control material-input" placeholder="Enter email" required>
-                </div>
+                <input type="email" id="email" class="form-control mb-3" placeholder="Enter Email" required>
+                <input type="password" id="password" class="form-control mb-3" placeholder="Enter Password" required>
 
-                <div class="mb-3">
-                    <label class="fw-semibold">Password</label>
-                    <input type="password" id="password" class="form-control material-input" placeholder="Enter password" required>
-                </div>
+                <button class="btn-login w-100 py-2 mt-2" type="submit">Login</button>
 
-                <button type="submit" class="btn btn-primary w-100 mt-3">Login</button>
-
-                <p class="text-center mt-3">
-                    New to ShopEasy?
-                    <a href="./register.html">Create Account</a>
+                <p class="mt-3">Don't have an account? 
+                    <a href="register.html">Register</a>
                 </p>
 
             </form>
@@ -68,25 +85,16 @@
         </div>
     </div>
 
-
 <script>
 document.getElementById("loginForm").addEventListener("submit", function(e){
     e.preventDefault();
 
-    let emailField = document.getElementById("email");
-    let passwordField = document.getElementById("password");
-
-    let email = emailField.value.trim();
-    let password = passwordField.value;
-
-    if (!email || !password) {
-        alert("All fields required!");
-        return;
-    }
+    let email = document.getElementById("email").value.trim();
+    let password = document.getElementById("password").value;
 
     let users = JSON.parse(localStorage.getItem("users")) || [];
 
-    // 🔐 Admin Login Condition
+    // Admin login
     if(email === "admin@gmail.com" && password === "admin123"){
         let adminUser = { name: "Admin", email: "admin@gmail.com" };
         localStorage.setItem("loggedInUser", JSON.stringify(adminUser));
@@ -95,15 +103,14 @@ document.getElementById("loginForm").addEventListener("submit", function(e){
         return;
     }
 
-    // 🟢 Normal User Login
+    // Normal login
     let user = users.find(u => u.email === email && u.password === password);
 
     if(user){
         localStorage.setItem("loggedInUser", JSON.stringify(user));
         alert("Login Successful!");
         window.location.href = "../index.html";
-    }
-    else {
+    } else {
         alert("Invalid Email or Password!");
     }
 });
@@ -111,3 +118,4 @@ document.getElementById("loginForm").addEventListener("submit", function(e){
 
 </body>
 </html>
+
