--- a/pages/register.html
+++ b/pages/register.html
@@ -5,124 +5,137 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Register - ShopEasy</title>
 
+    <!-- Bootstrap CSS -->
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet">
 
     <style>
-        body {
-            background: url('bg_image.jpeg') no-repeat center center fixed;
-            background-size: cover;
-            font-family: Arial, sans-serif;
+        body, html {
+            height: 100%;
+            margin: 0;
+            font-family: 'Segoe UI', sans-serif;
+            background: radial-gradient(circle, #101524, #05070f);
+            color: white;
         }
-        .overlay {
-            background: rgba(0,0,0,0.6);
-            position: fixed;
-            inset: 0;
-        }
+
         .register-box {
-            background: #fff;
-            padding: 30px;
-            border-radius: 12px;
+            background: rgba(20, 20, 40, 0.9);
+            padding: 35px;
+            border-radius: 15px;
+            box-shadow: 0 0 25px rgba(0, 238, 255, 0.4);
             width: 420px;
         }
-        .material-input {
-            border: none;
-            border-bottom: 2px solid #777;
-            border-radius: 0;
+
+        .register-box h3 {
+            color: #00eaff;
+            font-weight: bold;
+        }
+
+        .form-control {
             background: transparent;
+            border: none;
+            border-bottom: 2px solid #00eaff;
+            border-radius: 0;
+            color: white;
         }
-        .material-input:focus {
+        .form-control:focus {
             box-shadow: none;
-            border-bottom: 2px solid #007bff;
+            border-bottom-color: #6a00ff;
         }
+
+        .btn-register {
+            background: linear-gradient(90deg,#4e00c9,#00eaff);
+            color: #fff;
+            border: none;
+            font-weight: bold;
+        }
+        .btn-register:hover {
+            opacity: .85;
+        }
+
+        a {
+            color: #00eaff;
+        }
+        a:hover {
+            text-decoration: underline;
+        }
+
     </style>
 </head>
 <body>
 
-    <div class="overlay d-flex justify-content-center align-items-center">
-        <div class="register-box shadow">
+<div class="d-flex justify-content-center align-items-center" style="height:100vh;">
+    <div class="register-box text-center">
 
-            <h3 class="text-center fw-bold mb-3">Create Account</h3>
+        <h3 class="mb-4">Create Account</h3>
 
-            <form id="registerForm" autocomplete="off">
+        <form id="registerForm">
 
-                <div class="mb-3">
-                    <label class="fw-semibold">Full Name</label>
-                    <input type="text" id="fullName" class="form-control material-input" required>
-                </div>
+            <input type="text" id="name" class="form-control mb-3" placeholder="Full Name" required>
 
-                <div class="mb-3">
-                    <label class="fw-semibold">Email</label>
-                    <input type="email" id="regEmail" class="form-control material-input" required>
-                </div>
+            <input type="email" id="email" class="form-control mb-3" placeholder="Email Address" required>
 
-                <div class="mb-3">
-                    <label class="fw-semibold">Password</label>
-                    <input type="password" id="regPassword" class="form-control material-input" required>
-                </div>
+            <input type="password" id="password" class="form-control mb-3" placeholder="Password" required>
 
-                <div class="mb-3">
-                    <label class="fw-semibold">Confirm Password</label>
-                    <input type="password" id="regConfirmPassword" class="form-control material-input" required>
-                </div>
+            <input type="password" id="confirmPassword" class="form-control mb-3" placeholder="Confirm Password" required>
 
-                <button class="btn btn-primary w-100 mt-3" type="submit">Register</button>
+            <button class="btn-register w-100 py-2 mt-2" type="submit">Register</button>
 
-                <p class="text-center mt-3">
-                    Already have an account?
-                    <a href="./login.html">Login</a>
-                </p>
+            <p class="mt-3">Already have an account?
+                <a href="login.html">Login</a>
+            </p>
 
-            </form>
+        </form>
 
-        </div>
     </div>
+</div>
+
 
 <script>
+// Registration Logic
 document.getElementById("registerForm").addEventListener("submit", function(e){
     e.preventDefault();
 
-    const name = document.getElementById("fullName").value.trim();
-    const email = document.getElementById("regEmail").value.trim();
-    const password = document.getElementById("regPassword").value;
-    const confirmPassword = document.getElementById("regConfirmPassword").value;
+    let name = document.getElementById("name").value.trim();
+    let email = document.getElementById("email").value.trim();
+    let password = document.getElementById("password").value;
+    let confirmPassword = document.getElementById("confirmPassword").value;
 
-    if (!name || !email || !password || !confirmPassword) {
+    if(!name || !email || !password || !confirmPassword){
         alert("All fields are required!");
         return;
     }
 
-    if (password.length < 6) {
+    if(password.length < 6){
         alert("Password must be at least 6 characters!");
         return;
     }
 
-    if (password !== confirmPassword) {
+    if(password !== confirmPassword){
         alert("Passwords do not match!");
         return;
     }
 
     let users = JSON.parse(localStorage.getItem("users")) || [];
 
-    // Check if email already exists
-    if (users.some(u => u.email === email)) {
+    if(users.some(u => u.email === email)){
         alert("Email already registered!");
         return;
     }
 
-    // Add new user
     users.push({
         id: Date.now(),
-        name: name,
-        email: email,
-        password: password
+        name,
+        email,
+        password
     });
 
     localStorage.setItem("users", JSON.stringify(users));
 
-    alert("Registration successful! Please login.");
+    alert("Registration Successful!");
     window.location.href = "login.html";
 });
 </script>
 
 </body>
 </html>
+
