--- a/pages/add_product.html
+++ b/pages/add_product.html
@@ -9,101 +9,160 @@
 
     <style>
         body {
-            background: url('bg_image.jpeg') no-repeat center center fixed;
-            background-size: cover;
-            font-family: Arial, sans-serif;
+            font-family: 'Segoe UI', sans-serif;
+            background: radial-gradient(circle, #101524, #05070f);
+            color: white;
         }
-        .overlay {
-            background: rgba(0,0,0,0.6);
-            position: fixed;
-            inset: 0;
+
+        .admin-box {
+            width: 500px;
+            background: rgba(25, 25, 45, 0.92);
+            padding: 35px;
+            margin-top: 60px;
+            border-radius: 15px;
+            box-shadow: 0 0 25px rgba(0, 238, 255, 0.4);
         }
-        .form-container {
-            max-width: 550px;
-            background: #fff;
-            padding: 30px;
-            border-radius: 12px;
+
+        .admin-box h3 {
+            color: #00eaff;
+            font-weight: bold;
+        }
+
+        .form-control {
+            background-color: transparent;
+            border: none;
+            border-bottom: 2px solid #00eaff;
+            border-radius: 0;
+            color: white;
+        }
+        .form-control:focus {
+            box-shadow: none;
+            border-bottom: 2px solid #6a00ff;
+        }
+
+        .btn-add {
+            background: linear-gradient(90deg, #4e00c9, #00eaff);
+            border: none;
+            font-weight: bold;
+            color: #fff;
+        }
+        .btn-add:hover {
+            opacity: .85;
+        }
+
+        #previewImg {
+            width: 100%;
+            height: 180px;
+            object-fit: cover;
+            border-radius: 10px;
+            display: none;
+            margin-bottom: 15px;
+            border: 2px solid #00eaff;
+        }
+
+        a {
+            color: #00eaff;
         }
     </style>
 </head>
 <body>
 
-<div class="overlay d-flex justify-content-center align-items-center">
-    <div class="form-container shadow">
+<!-- Navbar -->
+<nav class="navbar navbar-dark bg-dark px-3">
+    <a class="navbar-brand fw-bold" href="../index.html">ShopEasy</a>
+    <a href="#" id="logoutBtn" class="text-light">Logout</a>
+</nav>
 
-        <h3 class="text-center fw-bold mb-3 text-dark">Add New Product</h3>
+<div class="d-flex justify-content-center">
+    <div class="admin-box shadow">
+
+        <h3 class="text-center mb-4">Add New Product</h3>
+
+        <img id="previewImg" alt="Preview">
 
         <form id="addProductForm">
-            <div class="mb-3">
-                <label class="form-label fw-semibold">Product Name</label>
-                <input type="text" id="productName" class="form-control" required>
-            </div>
 
-            <div class="mb-3">
-                <label class="form-label fw-semibold">Price (₹)</label>
-                <input type="number" id="productPrice" class="form-control" required>
-            </div>
+            <input type="text" id="productName" class="form-control mb-3"
+                placeholder="Product Name" required>
 
-            <div class="mb-3">
-                <label class="form-label fw-semibold">Description</label>
-                <textarea id="productDescription" class="form-control" rows="3" required></textarea>
-            </div>
+            <input type="number" id="price" class="form-control mb-3"
+                placeholder="Price (₹)" required>
 
-            <div class="mb-3">
-                <label class="form-label fw-semibold">Upload Image</label>
-                <input type="file" id="imageFile" class="form-control" accept="image/*" required>
-            </div>
+            <textarea id="description" class="form-control mb-3"
+                placeholder="Description" rows="2" required></textarea>
 
-            <button class="btn btn-primary w-100 mt-2" type="submit">Add Product</button>
+            <input type="file" id="imageFile" class="form-control mb-3"
+                accept="image/*" required>
+
+            <button class="btn-add w-100 py-2 mt-2" type="submit">
+                + Add Product
+            </button>
+
         </form>
 
     </div>
 </div>
 
+<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js"></script>
+
+
 <script>
-    // Allow Admin only
-    const admin = JSON.parse(localStorage.getItem("loggedInUser"));
-    if(!admin || admin.email !== "admin@gmail.com"){
-        alert("Admin access only!");
-        window.location.href = "login.html";
+// Admin protection
+let user = JSON.parse(localStorage.getItem("loggedInUser"));
+if (!user || user.email !== "admin@gmail.com") {
+    alert("Access Denied! Admin Only.");
+    window.location.href = "login.html";
+}
+
+// Logout
+document.getElementById("logoutBtn").onclick = () => {
+    localStorage.removeItem("loggedInUser");
+    window.location.href = "login.html";
+};
+
+// Image Preview
+document.getElementById("imageFile").addEventListener("change", function(){
+    let file = this.files[0];
+    if(file){
+        let preview = document.getElementById("previewImg");
+        preview.style.display = "block";
+        preview.src = URL.createObjectURL(file);
+    }
+});
+
+// Add product logic
+document.getElementById("addProductForm").addEventListener("submit", function(e){
+    e.preventDefault();
+
+    let name = document.getElementById("productName").value.trim();
+    let price = parseFloat(document.getElementById("price").value);
+    let description = document.getElementById("description").value.trim();
+    let imageFile = document.getElementById("imageFile").files[0];
+
+    if (!name || !price || !description || !imageFile) {
+        alert("Fill all fields properly!");
+        return;
     }
 
-    document.getElementById("addProductForm").addEventListener("submit", function(e){
-        e.preventDefault();
+    let imageURL = URL.createObjectURL(imageFile);
 
-        let name = productName.value.trim();
-        let price = Number(productPrice.value);
-        let description = productDescription.value.trim();
-        let file = imageFile.files[0];
+    let products = JSON.parse(localStorage.getItem("products")) || [];
 
-        if(!file){
-            alert("Please upload an image!");
-            return;
-        }
-
-        let reader = new FileReader();
-        reader.onload = function(){
-            let base64Image = reader.result;
-
-            let products = JSON.parse(localStorage.getItem("products")) || [];
-
-            products.push({
-                id: Date.now(),
-                name,
-                price,
-                description,
-                image: base64Image
-            });
-
-            localStorage.setItem("products", JSON.stringify(products));
-
-            alert("Product Added Successfully!");
-            window.location.href = "products.html";
-        };
-
-        reader.readAsDataURL(file);
+    products.push({
+        id: Date.now(),
+        name,
+        price,
+        description,
+        image: imageURL
     });
+
+    localStorage.setItem("products", JSON.stringify(products));
+
+    alert("Product added successfully!");
+    window.location.href = "products.html";
+});
 </script>
 
 </body>
 </html>
+
