--- a/pages/cart.html
+++ b/pages/cart.html
@@ -5,172 +5,158 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Cart - ShopEasy</title>
 
-    <!-- Bootstrap CSS -->
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet">
 
     <style>
         body {
-            background-color: #0a0f1f;
-            color: #ffffff;
             font-family: 'Segoe UI', sans-serif;
+            background: radial-gradient(circle, #101524, #05070f);
+            color: white;
         }
 
-        .navbar {
-            background: linear-gradient(90deg,#4e00c9,#00eaff);
+        h2 {
+            color: #00eaff;
+            font-weight: bold;
         }
 
-        .cart-card {
-            background: #101524;
-            border: none;
+        .cart-box {
+            background: rgba(25, 25, 45, 0.92);
             border-radius: 12px;
-            padding: 15px;
-            transition: .3s;
-        }
-
-        .cart-card:hover {
-            transform: translateY(-5px);
-            box-shadow: 0 8px 22px rgba(0, 238, 255, 0.25);
+            padding: 20px;
+            margin-bottom: 18px;
+            box-shadow: 0 0 18px rgba(0, 238, 255, 0.25);
         }
 
         .item-img {
-            width: 95px;
-            height: 95px;
-            object-fit: cover;
+            width: 110px;
+            height: 110px;
             border-radius: 10px;
+            object-fit: cover;
             border: 2px solid #00eaff;
         }
 
         .qty-btn {
-            background: #4e00c9;
+            background: #00eaff;
+            color: black;
+            font-size: 18px;
             border: none;
             width: 35px;
             height: 35px;
-            color: white;
             font-weight: bold;
-            border-radius: 50%;
+            border-radius: 6px;
         }
 
         .qty-btn:hover {
-            background: #00eaff;
-            color: black;
+            background: #4e00c9;
+            color: white;
         }
 
-        .btn-checkout {
-            background: linear-gradient(90deg,#00eaff,#4e00c9);
+        .checkout-btn {
+            background: linear-gradient(90deg, #6a00ff, #00eaff);
             border: none;
-            font-size: 18px;
             font-weight: bold;
-            color: #ffffff;
+            padding: 12px 25px;
+            border-radius: 10px;
         }
-        .btn-checkout:hover {
-            opacity: .85;
+        .checkout-btn:hover {
+            opacity:.85;
         }
 
-        .empty-text {
-            color: #aaaaaa;
+        .remove-text {
+            color: #ff4d4d;
+            cursor: pointer;
         }
     </style>
 </head>
 <body>
 
-    <!-- Navbar -->
-    <nav class="navbar navbar-expand-lg navbar-dark shadow-lg">
-        <div class="container">
-            <a class="navbar-brand fw-bold" href="../index.html">ShopEasy</a>
-            <ul class="navbar-nav ms-auto" id="navbarLinks"></ul>
-        </div>
-    </nav>
+<!-- Navbar -->
+<nav class="navbar navbar-dark bg-dark px-3">
+    <a class="navbar-brand fw-bold" href="../index.html">ShopEasy</a>
+    <a href="#" id="logoutBtn" class="text-light">Logout</a>
+</nav>
 
-    <div class="container mt-4">
-        <h2 class="fw-bold text-center mb-4">Your Cart</h2>
-        <div id="cartItems"></div>
+<div class="container mt-4">
+    <h2 class="text-center">🛒 Your Cart</h2>
 
-        <div class="text-end mt-4">
-            <h4 class="fw-bold">Total: ₹<span id="totalPrice">0</span></h4>
-            <button class="btn-checkout px-4 py-2 mt-2" id="checkoutBtn">Checkout</button>
-        </div>
+    <div id="cartItems" class="mt-4"></div>
+
+    <div class="text-end mt-4">
+        <h4>Total: ₹ <span id="totalPrice">0</span></h4>
+        <button class="checkout-btn mt-2">Proceed to Checkout</button>
     </div>
+</div>
 
-    <script>
-        let loggedUser = JSON.parse(localStorage.getItem("loggedInUser"));
-        if (!loggedUser) {
-            alert("Please log in first!");
-            window.location.href = "login.html";
-        }
+<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js"></script>
 
-        let navbar = document.getElementById("navbarLinks");
-        navbar.innerHTML = `
-            <li class="nav-item"><a class="nav-link">Welcome, ${loggedUser.name}</a></li>
-            <li class="nav-item"><a id="logoutBtn" class="nav-link">Logout</a></li>
+<script>
+// User must be logged in
+let user = JSON.parse(localStorage.getItem("loggedInUser"));
+if(!user){
+    alert("Please Login First");
+    window.location.href = "login.html";
+}
+
+// Logout
+document.getElementById("logoutBtn").onclick = () => {
+    localStorage.removeItem("loggedInUser");
+    window.location.href = "login.html";
+};
+
+let cart = JSON.parse(localStorage.getItem("cart")) || [];
+const cartContainer = document.getElementById("cartItems");
+const totalEl = document.getElementById("totalPrice");
+
+function updateCart(){
+    let total = 0;
+    cartContainer.innerHTML = "";
+
+    cart.forEach((item, index) => {
+        total += item.price * item.qty;
+
+        cartContainer.innerHTML += `
+            <div class="cart-box row align-items-center">
+                <div class="col-3 text-center">
+                    <img src="${item.image}" class="item-img">
+                </div>
+
+                <div class="col-5">
+                    <h5>${item.name}</h5>
+                    <p class="text-info fw-bold">₹${item.price}</p>
+                    <span class="remove-text" onclick="removeItem(${index})">Remove</span>
+                </div>
+
+                <div class="col-4 text-center">
+                    <button class="qty-btn" onclick="changeQty(${index}, -1)">-</button>
+                    <span class="mx-2 fw-bold">${item.qty}</span>
+                    <button class="qty-btn" onclick="changeQty(${index}, 1)">+</button>
+                </div>
+            </div>
         `;
+    });
 
-        document.getElementById("logoutBtn").onclick = () => {
-            localStorage.removeItem("loggedInUser");
-            window.location.href = "login.html";
-        };
+    totalEl.innerText = total;
+    localStorage.setItem("cart", JSON.stringify(cart));
+}
 
-        let cart = JSON.parse(localStorage.getItem("cart")) || [];
-        const cartDiv = document.getElementById("cartItems");
-        const totalPriceElement = document.getElementById("totalPrice");
+function changeQty(i, change){
+    cart[i].qty += change;
 
-        function renderCart() {
-            cartDiv.innerHTML = "";
-            let total = 0;
+    if(cart[i].qty <= 0){
+        cart.splice(i,1);
+    }
+    updateCart();
+}
 
-            if(cart.length === 0){
-                cartDiv.innerHTML = `<p class="text-center empty-text">Your cart is empty.</p>`;
-                totalPriceElement.innerText = "0";
-                return;
-            }
+function removeItem(i){
+    cart.splice(i,1);
+    updateCart();
+}
 
-            cart.forEach((item, idx) => {
-                total += item.price * item.qty;
-
-                cartDiv.innerHTML += `
-                    <div class="cart-card mb-3 d-flex align-items-center shadow-sm">
-                        <img src="../pages/${item.image}" class="item-img me-3">
-                        <div>
-                            <h5 class="fw-bold">${item.name}</h5>
-                            <p class="mb-1">₹${item.price}</p>
-                            <div class="d-flex align-items-center">
-                                <button class="qty-btn" onclick="updateQty(${idx}, -1)">-</button>
-                                <span class="mx-2">${item.qty}</span>
-                                <button class="qty-btn" onclick="updateQty(${idx}, 1)">+</button>
-                                <button class="btn btn-danger btn-sm ms-3"
-                                    onclick="removeItem(${idx})">Remove</button>
-                            </div>
-                        </div>
-                    </div>
-                `;
-            });
-
-            totalPriceElement.innerText = total.toLocaleString("en-IN");
-        }
-
-        function updateQty(index, val) {
-            cart[index].qty += val;
-            if(cart[index].qty < 1) {
-                cart.splice(index, 1);
-            }
-            localStorage.setItem("cart", JSON.stringify(cart));
-            renderCart();
-        }
-
-        function removeItem(index) {
-            cart.splice(index, 1);
-            localStorage.setItem("cart", JSON.stringify(cart));
-            renderCart();
-        }
-
-        document.getElementById("checkoutBtn").onclick = () => {
-            alert("Checkout successful! (Simulation)");
-            localStorage.removeItem("cart");
-            renderCart();
-        };
-
-        renderCart();
-    </script>
+updateCart();
+</script>
 
 </body>
 </html>
+
 
