--- a/pages/register.html
+++ b/pages/register.html
@@ -5,118 +5,114 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Register - ShopEasy</title>
 
-    <!-- Bootstrap CSS -->
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet">
-
     <style>
-        body, html {
-            height: 100%;
-            margin: 0;
+        body {
             font-family: 'Segoe UI', sans-serif;
-            background: radial-gradient(circle, #101524, #05070f);
-            color: white;
+            background: radial-gradient(circle at center, #0a0f1f, #02040a);
+            color: #e0eaff;
         }
 
         .register-box {
-            background: rgba(20, 20, 40, 0.9);
+            max-width: 450px;
+            margin: auto;
+            background: rgba(10, 18, 40, 0.9);
             padding: 35px;
-            border-radius: 15px;
+            border-radius: 16px;
             box-shadow: 0 0 25px rgba(0, 238, 255, 0.4);
-            width: 420px;
+            margin-top: 100px;
         }
 
-        .register-box h3 {
+        h2 {
+            text-align: center;
+            font-weight: bold;
             color: #00eaff;
-            font-weight: bold;
+            margin-bottom: 25px;
         }
 
-        .form-control {
-            background: transparent;
-            border: none;
-            border-bottom: 2px solid #00eaff;
-            border-radius: 0;
-            color: white;
-        }
-        .form-control:focus {
-            box-shadow: none;
-            border-bottom-color: #6a00ff;
+        label {
+            color: #e0eaff;
+            font-weight: 600;
+            margin-bottom: 5px;
         }
 
-        .btn-register {
-            background: linear-gradient(90deg,#4e00c9,#00eaff);
+        input {
+            background: rgba(255,255,255,0.12);
+            border: 1px solid #00eaff;
             color: #fff;
-            border: none;
-            font-weight: bold;
         }
-        .btn-register:hover {
+
+        input::placeholder {
+            color: #ccd9ff;
+        }
+        input:focus {
+            border-color: #6a00ff;
+            box-shadow: 0 0 6px #6a00ff;
+            outline: none;
+        }
+
+        .register-btn {
+            width: 100%;
+            background: linear-gradient(90deg, #6a00ff, #00eaff);
+            border: none;
+            padding: 12px;
+            border-radius: 8px;
+            font-weight: bold;
+            margin-top: 10px;
+        }
+        .register-btn:hover {
             opacity: .85;
         }
 
         a {
-            color: #00eaff;
+            color: #00bfff;
         }
-        a:hover {
-            text-decoration: underline;
-        }
-
     </style>
 </head>
+
 <body>
 
-<div class="d-flex justify-content-center align-items-center" style="height:100vh;">
-    <div class="register-box text-center">
+<div class="register-box">
+    <h2>Create Account</h2>
 
-        <h3 class="mb-4">Create Account</h3>
+    <form id="registerForm">
+        <label>Full Name</label>
+        <input type="text" id="name" class="form-control mb-3" placeholder="Enter Name" required>
 
-        <form id="registerForm">
+        <label>Email</label>
+        <input type="email" id="email" class="form-control mb-3" placeholder="Enter Email" required>
 
-            <input type="text" id="name" class="form-control mb-3" placeholder="Full Name" required>
+        <label>Password</label>
+        <input type="password" id="password" class="form-control mb-3" placeholder="Enter Password" required>
 
-            <input type="email" id="email" class="form-control mb-3" placeholder="Email Address" required>
+        <label>Confirm Password</label>
+        <input type="password" id="confirm" class="form-control mb-3" placeholder="Confirm Password" required>
 
-            <input type="password" id="password" class="form-control mb-3" placeholder="Password" required>
+        <button type="submit" class="register-btn">Register</button>
+    </form>
 
-            <input type="password" id="confirmPassword" class="form-control mb-3" placeholder="Confirm Password" required>
-
-            <button class="btn-register w-100 py-2 mt-2" type="submit">Register</button>
-
-            <p class="mt-3">Already have an account?
-                <a href="login.html">Login</a>
-            </p>
-
-        </form>
-
-    </div>
+    <p class="text-center mt-3">
+        Already have an account? <a href="login.html">Login</a>
+    </p>
 </div>
 
 
+<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js"></script>
 <script>
-// Registration Logic
 document.getElementById("registerForm").addEventListener("submit", function(e){
     e.preventDefault();
 
     let name = document.getElementById("name").value.trim();
     let email = document.getElementById("email").value.trim();
     let password = document.getElementById("password").value;
-    let confirmPassword = document.getElementById("confirmPassword").value;
+    let confirm = document.getElementById("confirm").value;
 
-    if(!name || !email || !password || !confirmPassword){
-        alert("All fields are required!");
-        return;
-    }
-
-    if(password.length < 6){
-        alert("Password must be at least 6 characters!");
-        return;
-    }
-
-    if(password !== confirmPassword){
+    if(password !== confirm){
         alert("Passwords do not match!");
         return;
     }
 
     let users = JSON.parse(localStorage.getItem("users")) || [];
-
     if(users.some(u => u.email === email)){
         alert("Email already registered!");
         return;
@@ -130,12 +126,12 @@ document.getElementById("registerForm").addEventListener("submit", function(e){
     });
 
     localStorage.setItem("users", JSON.stringify(users));
-
-    alert("Registration Successful!");
+    alert("Registration successful!");
     window.location.href = "login.html";
 });
 </script>
 
 </body>
 </html>
+
 
